fix: chat use header namespace
