# apiserver/docs/swagger.json
@@ -1374,8 +1374,7 @@
         "chat.APPMetadata": {
             "type": "object",
             "required": [
-                "app_name",
-                "app_namespace"
+                "app_name"
             ],
             "properties": {
                 "app_name": {
@@ -1384,7 +1383,7 @@
                     "example": "chat-with-llm"
                 },
                 "app_namespace": {
-                    "description": "AppNamespace, the namespace of the application",
+                    "description": "AppNamespace, the namespace of the application, will be forced to use the value of the namespace in the request header for security reasons and is placed here only for compatibility with older versions",
                     "type": "string",
                     "example": "kubeagi-system"
                 }
@@ -1394,7 +1393,6 @@
             "type": "object",
             "required": [
                 "app_name",
-                "app_namespace",
                 "query",
                 "response_mode"
             ],
@@ -1405,7 +1403,7 @@
                     "example": "chat-with-llm"
                 },
                 "app_namespace": {
-                    "description": "AppNamespace, the namespace of the application",
+                    "description": "AppNamespace, the namespace of the application, will be forced to use the value of the namespace in the request header for security reasons and is placed here only for compatibility with older versions",
                     "type": "string",
                     "example": "kubeagi-system"
                 },
@@ -1492,8 +1490,7 @@
         "chat.ConversationReqBody": {
             "type": "object",
             "required": [
-                "app_name",
-                "app_namespace"
+                "app_name"
             ],
             "properties": {
                 "app_name": {
@@ -1502,7 +1499,7 @@
                     "example": "chat-with-llm"
                 },
                 "app_namespace": {
-                    "description": "AppNamespace, the namespace of the application",
+                    "description": "AppNamespace, the namespace of the application, will be forced to use the value of the namespace in the request header for security reasons and is placed here only for compatibility with older versions",
                     "type": "string",
                     "example": "kubeagi-system"
                 },
@@ -1542,8 +1539,7 @@
         "chat.MessageReqBody": {
             "type": "object",
             "required": [
-                "app_name",
-                "app_namespace"
+                "app_name"
             ],
             "properties": {
                 "app_name": {
@@ -1552,7 +1548,7 @@
                     "example": "chat-with-llm"
                 },
                 "app_namespace": {
-                    "description": "AppNamespace, the namespace of the application",
+                    "description": "AppNamespace, the namespace of the application, will be forced to use the value of the namespace in the request header for security reasons and is placed here only for compatibility with older versions",
                     "type": "string",
                     "example": "kubeagi-system"
                 },
